style: Update post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,53 +3,32 @@ layout: default
 ---
 
 <style>
+  .blogholder {
+    display: inline-block !important;
+    position: relative;
+    width: 52em;
+  }
 
-.blogholder {
+  .border {
+    border: 1px solid #ddd;
+  }
 
-	display: inline-block !important;
-	position: relative;
-	width: 52em;
-
-}
-
-.border
-	{
-
-	border: 1px solid #ddd;
-
-}
-
-
-.pquote {
-
+  .pquote {
     float: right;
     width: 500px;
     font-size: 30px !important;
     line-height: 1.1em;
     padding: 25px;
-}
+  }
 
-blockquote
-
-{
+  blockquote {
     margin: 10px;
-	margin-left: 25px;
+    margin-left: 25px;
+  }
 
-}
-
-blockquote p {
-
-color: #3095B5 !important;
-
-}
-
-.quotesig {
-
-	font-size: 14px;
-
-}
-
-
+  .quotesig {
+    font-size: 14px;
+  }
 </style>
 
 <div class="blogholder img-responsive">
